{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 78,
  "lineage": "2f1f53eb-4943-88c4-fffd-45276937ae53",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "eigw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0b3ba4655923c7264",
            "vpc_id": "vpc-0d6725cf418ffaa08"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0dddc1c6334828bd2",
            "domain": "vpc",
            "id": "eipalloc-b6a14f80",
            "network_border_group": "us-west-1",
            "network_interface": "eni-09f1da43b7ea73753",
            "private_dns": "ip-10-0-8-14.us-west-1.compute.internal",
            "private_ip": "10.0.8.14",
            "public_dns": "ec2-18-144-103-142.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.103.142",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bb0bf3df008f9f69",
            "domain": "vpc",
            "id": "eipalloc-c5bb55f3",
            "network_border_group": "us-west-1",
            "network_interface": "eni-06233dde4ec9adb32",
            "private_dns": "ip-10-0-10-10.us-west-1.compute.internal",
            "private_ip": "10.0.10.10",
            "public_dns": "ec2-54-177-175-203.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.175.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:486724663948:internet-gateway/igw-07fa713bec1b52594",
            "id": "igw-07fa713bec1b52594",
            "owner_id": "486724663948",
            "tags": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "vpc_id": "vpc-0d6725cf418ffaa08"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b6a14f80",
            "id": "nat-04a910bd24eceda91",
            "network_interface_id": "eni-09f1da43b7ea73753",
            "private_ip": "10.0.8.14",
            "public_ip": "18.144.103.142",
            "subnet_id": "subnet-01f746411c0629a8b"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip01",
            "module.vpc.aws_subnet.pubsn01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-c5bb55f3",
            "id": "nat-00ea5d43bea9745d1",
            "network_interface_id": "eni-06233dde4ec9adb32",
            "private_ip": "10.0.10.10",
            "public_ip": "54.177.175.203",
            "subnet_id": "subnet-095b931c85afd1410"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip02",
            "module.vpc.aws_subnet.pubsn02"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_route01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:486724663948:route-table/rtb-0d839bc75caa033df",
            "id": "rtb-0d839bc75caa033df",
            "owner_id": "486724663948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0b3ba4655923c7264",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fa713bec1b52594",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "vpc_id": "vpc-0d6725cf418ffaa08"
          },
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.eigw",
            "module.vpc.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_route02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:486724663948:route-table/rtb-01177c95f4c0d8e3c",
            "id": "rtb-01177c95f4c0d8e3c",
            "owner_id": "486724663948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0b3ba4655923c7264",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fa713bec1b52594",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "vpc_id": "vpc-0d6725cf418ffaa08"
          },
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.eigw",
            "module.vpc.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:486724663948:route-table/rtb-0616bada34e7f2828",
            "id": "rtb-0616bada34e7f2828",
            "owner_id": "486724663948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fa713bec1b52594",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "vpc_id": "vpc-0d6725cf418ffaa08"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:486724663948:route-table/rtb-0e17cde24135e2775",
            "id": "rtb-0e17cde24135e2775",
            "owner_id": "486724663948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fa713bec1b52594",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "vpc_id": "vpc-0d6725cf418ffaa08"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rta01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4efd5b67cc278bc",
            "route_table_id": "rtb-0d839bc75caa033df",
            "subnet_id": "subnet-0f067df28bc14e027"
          },
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.eigw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.priv_route01",
            "module.vpc.aws_subnet.privsn01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rta02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025c17bf7b34e605e",
            "route_table_id": "rtb-01177c95f4c0d8e3c",
            "subnet_id": "subnet-0b2253edee539458f"
          },
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.eigw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.priv_route02",
            "module.vpc.aws_subnet.privsn02"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rta01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5eb6a84529182f9",
            "route_table_id": "rtb-0616bada34e7f2828",
            "subnet_id": "subnet-01f746411c0629a8b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_route01",
            "module.vpc.aws_subnet.pubsn01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rta02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4b407648f7e4ddd",
            "route_table_id": "rtb-0e17cde24135e2775",
            "subnet_id": "subnet-095b931c85afd1410"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_route02",
            "module.vpc.aws_subnet.pubsn02"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsn01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:486724663948:subnet/subnet-0f067df28bc14e027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.15.0/24",
            "id": "subnet-0f067df28bc14e027",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486724663948",
            "tags": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "vpc_id": "vpc-0d6725cf418ffaa08"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsn02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:486724663948:subnet/subnet-0b2253edee539458f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.17.0/24",
            "id": "subnet-0b2253edee539458f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486724663948",
            "tags": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "vpc_id": "vpc-0d6725cf418ffaa08"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsn01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:486724663948:subnet/subnet-01f746411c0629a8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-01f746411c0629a8b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486724663948",
            "tags": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "vpc_id": "vpc-0d6725cf418ffaa08"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsn02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:486724663948:subnet/subnet-095b931c85afd1410",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-095b931c85afd1410",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486724663948",
            "tags": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "vpc_id": "vpc-0d6725cf418ffaa08"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraformvpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:486724663948:vpc/vpc-0d6725cf418ffaa08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0443b16141220ebf4",
            "default_route_table_id": "rtb-0d827de65ead0dc20",
            "default_security_group_id": "sg-03565de9d3cf7ec81",
            "dhcp_options_id": "dopt-709e6616",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d6725cf418ffaa08",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d827de65ead0dc20",
            "owner_id": "486724663948",
            "tags": {
              "Env": "sandbox",
              "Name": "lab"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "lab"
            }
          }
        }
      ]
    }
  ]
}